--- a/jpsite-client/pom.xml
+++ b/jpsite-client/pom.xml
@@ -7,27 +7,41 @@
     <parent>
         <groupId>com.jls.springboot</groupId>
         <artifactId>jpsite-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
+    <groupId>com.jls.springboot</groupId>
     <artifactId>jpsite-client</artifactId>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-        <spring.version>5.0.10.RELEASE</spring.version>
-    </properties>
+    <version>1.0.0-SNAPSHOT</version>
+    <name>jpsite-client</name>
+
     <dependencies>
         <dependency>
             <groupId>com.jls.springboot</groupId>
-            <artifactId>jpsite-server</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>jpsite-security-core</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.jls.springboot</groupId>
+            <artifactId>jpsite-security-browser</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jls.springboot</groupId>
+            <artifactId>jpsite-security-social</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jls.springboot</groupId>
+            <artifactId>jpsite-server</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.11</version>
         </dependency>
+
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -38,19 +52,14 @@
             <artifactId>HikariCP</artifactId>
             <version>2.7.9</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <!--spring boot不使用parent方式进行依赖,需要scope和type设置-->
+        <!--spring boot不使用parent方式进行依赖,需要scope和type设置
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-dependencies</artifactId>
-            <version>${spring-boot-version}</version>
+            <version>${spring-boot.version}</version>
             <scope>import</scope>
             <type>pom</type>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -71,36 +80,20 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <version>${spring-boot-version}</version>
+            <version>${spring-boot.version}</version>
             <optional>true</optional>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
-            <version>${spring-boot-version}</version>
+            <version>${spring-boot.version}</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
-            <version>0.7.0</version>
         </dependency>
-        <!-- jpsite-security -->
-        <dependency>
-            <groupId>com.jls.springboot</groupId>
-            <artifactId>jpsite-security-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.jls.springboot</groupId>
-            <artifactId>jpsite-security-browser</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.jls.springboot</groupId>
-            <artifactId>jpsite-security-social</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+
         <!-- zookeeper curator-utils -->
         <dependency>
             <groupId>org.apache.curator</groupId>
@@ -116,18 +109,12 @@
         </dependency>
 
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -136,16 +123,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <!--这里写上main方法所在类的路径-->
+                <!--这里写上main方法所在类的路径
                 <configuration>
                     <mainClass>com.mty.jpsite.JpsiteApplication</mainClass>
                 </configuration>
@@ -155,12 +137,12 @@
                             <goal>repackage</goal>
                         </goals>
                     </execution>
-                </executions>
+                </executions>-->
             </plugin>
             <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
-                <version>1.0.0</version>
+                <version>0.4.13</version>
                 <configuration>
                     <imageName>${project.artifactId}</imageName>
                     <dockerDirectory>${basedir}/src/main/docker</dockerDirectory>
@@ -176,6 +158,13 @@
                     <execution>
                         <id>build-image</id>
                         <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>build-image2</id>
+                        <phase>install</phase>
                         <goals>
                             <goal>build</goal>
                         </goals>
